docs-archive/apache-airflow-providers-apache-livy/2.1.0/_sources/_api/airflow/providers/apache/livy/hooks/livy/index.rst.txt
:py:mod:`airflow.providers.apache.livy.hooks.livy`
==================================================

.. py:module:: airflow.providers.apache.livy.hooks.livy

.. autoapi-nested-parse::

   This module contains the Apache Livy hook.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.apache.livy.hooks.livy.BatchState
   airflow.providers.apache.livy.hooks.livy.LivyHook




.. py:class:: BatchState

   Bases: :py:obj:`enum.Enum`

   Batch session states

   .. py:attribute:: NOT_STARTED
      :annotation: = not_started

      

   .. py:attribute:: STARTING
      :annotation: = starting

      

   .. py:attribute:: RUNNING
      :annotation: = running

      

   .. py:attribute:: IDLE
      :annotation: = idle

      

   .. py:attribute:: BUSY
      :annotation: = busy

      

   .. py:attribute:: SHUTTING_DOWN
      :annotation: = shutting_down

      

   .. py:attribute:: ERROR
      :annotation: = error

      

   .. py:attribute:: DEAD
      :annotation: = dead

      

   .. py:attribute:: KILLED
      :annotation: = killed

      

   .. py:attribute:: SUCCESS
      :annotation: = success

      


.. py:class:: LivyHook(livy_conn_id: str = default_conn_name, extra_options: Optional[Dict[str, Any]] = None, extra_headers: Optional[Dict[str, Any]] = None)

   Bases: :py:obj:`airflow.providers.http.hooks.http.HttpHook`, :py:obj:`airflow.utils.log.logging_mixin.LoggingMixin`

   Hook for Apache Livy through the REST API.

   :param livy_conn_id: reference to a pre-defined Livy Connection.
   :type livy_conn_id: str
   :param extra_options: A dictionary of options passed to Livy.
   :type extra_options: Dict[str, Any]
   :param extra_headers: A dictionary of headers passed to the HTTP request to livy.
   :type extra_headers: Dict[str, Any]

   .. seealso::
       For more details refer to the Apache Livy API reference:
       https://livy.apache.org/docs/latest/rest-api.html

   .. py:attribute:: TERMINAL_STATES
      

      

   .. py:attribute:: conn_name_attr
      :annotation: = livy_conn_id

      

   .. py:attribute:: default_conn_name
      :annotation: = livy_default

      

   .. py:attribute:: conn_type
      :annotation: = livy

      

   .. py:attribute:: hook_name
      :annotation: = Apache Livy

      

   .. py:method:: get_conn(self, headers: Optional[Dict[str, Any]] = None) -> Any

      Returns http session for use with requests

      :param headers: additional headers to be passed through as a dictionary
      :type headers: dict
      :return: requests session
      :rtype: requests.Session


   .. py:method:: run_method(self, endpoint: str, method: str = 'GET', data: Optional[Any] = None, headers: Optional[Dict[str, Any]] = None) -> Any

      Wrapper for HttpHook, allows to change method on the same HttpHook

      :param method: http method
      :type method: str
      :param endpoint: endpoint
      :type endpoint: str
      :param data: request payload
      :type data: dict
      :param headers: headers
      :type headers: dict
      :return: http response
      :rtype: requests.Response


   .. py:method:: post_batch(self, *args: Any, **kwargs: Any) -> Any

      Perform request to submit batch

      :return: batch session id
      :rtype: int


   .. py:method:: get_batch(self, session_id: Union[int, str]) -> Any

      Fetch info about the specified batch

      :param session_id: identifier of the batch sessions
      :type session_id: int
      :return: response body
      :rtype: dict


   .. py:method:: get_batch_state(self, session_id: Union[int, str]) -> BatchState

      Fetch the state of the specified batch

      :param session_id: identifier of the batch sessions
      :type session_id: Union[int, str]
      :return: batch state
      :rtype: BatchState


   .. py:method:: delete_batch(self, session_id: Union[int, str]) -> Any

      Delete the specified batch

      :param session_id: identifier of the batch sessions
      :type session_id: int
      :return: response body
      :rtype: dict


   .. py:method:: get_batch_logs(self, session_id: Union[int, str], log_start_position, log_batch_size) -> Any

      Gets the session logs for a specified batch.
      :param session_id: identifier of the batch sessions
      :type session_id: int
      :param log_start_position: Position from where to pull the logs
      :type log_start_position: int
      :param log_batch_size: Number of lines to pull in one batch
      :type log_batch_size: int

      :return: response body
      :rtype: dict


   .. py:method:: dump_batch_logs(self, session_id: Union[int, str]) -> Any

      Dumps the session logs for a specified batch

      :param session_id: identifier of the batch sessions
      :type session_id: int
      :return: response body
      :rtype: dict


   .. py:method:: build_post_batch_body(file: str, args: Optional[Sequence[Union[str, int, float]]] = None, class_name: Optional[str] = None, jars: Optional[List[str]] = None, py_files: Optional[List[str]] = None, files: Optional[List[str]] = None, archives: Optional[List[str]] = None, name: Optional[str] = None, driver_memory: Optional[str] = None, driver_cores: Optional[Union[int, str]] = None, executor_memory: Optional[str] = None, executor_cores: Optional[int] = None, num_executors: Optional[Union[int, str]] = None, queue: Optional[str] = None, proxy_user: Optional[str] = None, conf: Optional[Dict[Any, Any]] = None) -> Any
      :staticmethod:

      Build the post batch request body.
      For more information about the format refer to
      .. seealso:: https://livy.apache.org/docs/latest/rest-api.html
      :param file: Path of the file containing the application to execute (required).
      :type file: str
      :param proxy_user: User to impersonate when running the job.
      :type proxy_user: str
      :param class_name: Application Java/Spark main class string.
      :type class_name: str
      :param args: Command line arguments for the application s.
      :type args: Sequence[Union[str, int, float]]
      :param jars: jars to be used in this sessions.
      :type jars: Sequence[str]
      :param py_files: Python files to be used in this session.
      :type py_files: Sequence[str]
      :param files: files to be used in this session.
      :type files: Sequence[str]
      :param driver_memory: Amount of memory to use for the driver process  string.
      :type driver_memory: str
      :param driver_cores: Number of cores to use for the driver process int.
      :type driver_cores: Union[str, int]
      :param executor_memory: Amount of memory to use per executor process  string.
      :type executor_memory: str
      :param executor_cores: Number of cores to use for each executor  int.
      :type executor_cores: Union[int, str]
      :param num_executors: Number of executors to launch for this session  int.
      :type num_executors: Union[str, int]
      :param archives: Archives to be used in this session.
      :type archives: Sequence[str]
      :param queue: The name of the YARN queue to which submitted string.
      :type queue: str
      :param name: The name of this session string.
      :type name: str
      :param conf: Spark configuration properties.
      :type conf: dict
      :return: request body
      :rtype: dict



